working fetching steam rpofiles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,5 +43,8 @@ video {
 
 /* Components */
 
-.btn {
+/* Utility classes */
+.responsive-grid {
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+    width: 100%;
 }
