--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,40 +3,45 @@
 @tailwind utilities;
 
 :root {
-    --color-highlight: #66c0f4;
-    --color-background: #1b2838;
-    --color-background-light: #3b6390;
-    --color-background-darker: #171a21;
-    --color-text: #c5c3c0;
-    --color-input-bg: #2a475e;
-    --color-green-bg: #5c7e10;
-    --color-green-text: #a4d007;
+  --color-highlight: #66c0f4;
+  --color-background: #1b2838;
+  --color-background-light: #3b6390;
+  --color-background-darker: #171a21;
+  --color-text: #c5c3c0;
+  --color-input-bg: #2a475e;
+  --color-green-bg: #5c7e10;
+  --color-green-text: #a4d007;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-        Helvetica Neue, sans-serif;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  box-sizing: border-box;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 body {
-    background: linear-gradient(#203355, var(--color-background));
-    min-height: 100vh;
-}
-
-img,
-video {
-    max-width: 100%;
+  background: linear-gradient(#203355, var(--color-background));
+  min-height: 100vh;
 }
 
 .responsive-grid {
-    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
-    width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+  width: 100%;
+}
+
+img {
+  display: block;
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  aspect-ratio: 4 / 4;
 }
