--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,7 +38,7 @@ body {
 
 img {
   display: block;
-  object-fit: contain;
+  object-fit: cover;
   max-width: 100%;
   max-height: 100%;
   width: auto;
